better package name

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
-name = "windowed_bytes"
-version = "0.1.0"
+name = "byte_channel"
+version = "0.0.1"
 authors = ["Oliver Gould <ver@buoyant.io>"]
+license = "Apache-2.0"
+description = "Future-aware byte streams"
 
 [dependencies]
 bytes = "0.4"
